<resources>
    <string name="app_name">BGKMart</string>
    <string name="title_home">Home</string>
    <string name="logo">Logo</string>
    <string name="search">Search</string>
    <string name="shop">Shop</string>
    <string name="profile">Profile</string>
    <string name="what_new_today">What\'s New Today</string>
    <string name="image">Image</string>
    <string name="summary">Summary</string>
    <string name="summary_content">A TRC-20 token where people can give and get Phucks. Consider this a parody of Doge, Safemoon, Hoge, Shibu, and CumRocket, but with an actual product. We are creating a decentralized P2P IRC mobile payment app, where you give or receive a Phuck or two for fun. You can send a standardized message like, \"You got Phucks!\" or \"Don\'t say I never gave a Phuck!\" and much more. Our ultimate goal is to build the platform as we continue to grow the Phucks community and promote Tron blockchain by promoting its technology. No longer can anyone say, \"I don\'t have any Phucks left to give!\" Now you can give them some!</string>
    <string name="learn_more">Learn More</string>
    <string name="learn_phuck_coin">Learn Phuck Coin</string>
    <string name="tokenomics">Tokenomics</string>
    <string name="tokenomics_content">Hi I\'m Juan Federico, I am an eccentric billionaire from the country of Colombia. After years of innovation in the coffee trade, I decided to launch Phuck Coin to the masses so that every man, woman, and child could have enough Phucks to give, receive, buy, or sell until the year 2050. That is when the world\'s population will hit 10 billion and there will only be enough Phucks left for one Phuck per person. After that, I anticipate that a shortage of Phucks will cause the great Phuck Wars, making our Phucks worth more than the entire world\'s GDP. That means each Phuck will be worth millions upon millions of dollars.</string>
    <string name="where_to_buy">Where To Buy</string>
    <string name="buy_now">Buy Now</string>
    <string name="fyi_content">FYI: Once you have Tron in your Tronlink wallet, we recommend you keep at least 1 Tron in the balance. Deposits and Withdrawals use bandwidth/energy. So if you have 50 Trons to purchase our tokens, transaction may fail. Try the purchase with 45–49 Trons and it should succeed and you\'ll get our Phucks. If you have any further trouble, thenreach out to us in any of our social media platforms and will try our best to help you.</string>
    <string name="how_to_buy_phucks">How To Buy Phucks</string>
    <string name="buying_steps"> 1. Buy Tron at a trusted exchange platform \n 2. Setup a Tronlkink account \n 3. Transfer your Tron to your Tronlink Wallet \n 4. Sync your Tronlink with JustSwap.io \n 5. OUR CONTRACT ADDRESS \n \n  TFUusM3Nxu63BZX95DsZZAhhwyftRkVjo6 \n \n  6. Buy PHUCKS with your Tron  Now you got PHUCKS</string>
    <string name="shop_and_show_love">Shop - To Show Love</string>
    <string name="art">Art</string>
    <string name="jewelry">Jewelry</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="unisex">Unisex</string>
    <string name="see_all">See All</string>
    <string name="get_in_touch">Get In Touch</string>
    <string name="phuck_email">idont@givephuck.com</string>
    <string name="affiliate_registration">Affiliate Registration</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="tracking">Tracking</string>
    <string name="search_all_products">Search all products</string>
    <string name="categories">Categories</string>
    <string name="all_products">All Products</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_title_sample">Embroidered Champion Backpack – PHUCK LOGO</string>
    <string name="product_price_sample">44.5Rs</string>
    <string name="product">Product</string>
    <string name="product_description_sample">This small size Champion backpack is the perfect choice for running all sorts of daily errands or doing sports! There’s plenty of space for all your necessities, as well as separate pockets for your phone, passport, water bottle and laptop. It’s also water-resistant, so your belongings are sure to stay dry in any weather.  • Top part: 100% polyester, 600D • Bottom part: 100% polyester, 900D • Dimensions: 18″ × 11½″ × 6¼” (45.7 × 29.2 × 15.9 cm) • Product weight: 1.02 lbs (464 g) • Capacity: 5.5 gallons (21 l) • Max weight: 33 lbs (15 kg) • Large inside pocket with a 15″ laptop sleeve • Water-resistant • 2 slip side pockets for water bottles • Front zip pocket with embroidered Champion brand logo, containing an organizational compartment (a pocket with zip closure, 2 pouches for phone and passport, and 3 pen holders) • Top carry handle • Top zipper with 2 sliders and zipper pullers • Soft, padded mesh back with Champion brand logo • Padded ergonomic polyester bag straps with plastic strap regulators and Champion brand label on the left strap.</string>
    <string name="related_products">Related Products</string>
    <string name="cart">Cart</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="remove">Remove</string>
    <string name="coupon_code">Coupon Code if Any</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="checkout">Checkout</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="jane">Jane</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="pending_shipments">Pending Shipments</string>
    <string name="pending_payments">Pending Payments</string>
    <string name="finished_orders">Finisehd Orders</string>
    <string name="payment_method">Payment Method</string>
    <string name="billing_address">Billing Address</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="about_us">About us</string>
    <string name="log_out">Log out</string>
    <string name="numberr_99">99</string>
    <string name="zero_price">0.00</string>
    <string name="number_zero">0</string>
    <string name="zero_price_sample">0.00Rs</string>
    <string name="details">Details</string>
    <string name="refresh">Refresh</string>
    <string name="label">Label</string>
    <string name="category">Category</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="company">Company</string>
    <string name="street_address">Street Address</string>
    <string name="house_number">House number and street name</string>
    <string name="aparment_optional">Aparment, suite, unit etc. (Optional)</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="email_address">Email Address</string>
    <string name="save">Save</string>
    <string name="country">Country</string>
    <string name="order_note">Order note</string>
    <string name="order_note_optional">Order note (Optional)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="next">Next</string>
    <string name="continue_text">Continue</string>
    <string name="save_address_to_profile">Set as profile address</string>
    <string name="postcode">Post code</string>
    <string name="proceed_to_payement">Proceed to Payement</string>
    <string name="your_order">Your Order</string>
    <string name="shipping">Shipping</string>
    <string name="your_address">Your Address</string>
    <string name="paypal">Paypal</string>
    <string name="stripe">Stripe</string>
    <string name="paystack">Paystack</string>
    <string name="flutterwave">Flutterwave</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_and_pay">Confirm &amp; Pay</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_place_info">Your order has been placed!</string>
    <string name="view_order">View Order</string>
    <string name="apply">Apply</string>
    <string name="coupon">Coupon</string>
    <string name="question_mark">\?</string>
    <string name="pending_delivery">Pending Delivery</string>
    <string name="this_will_be_your_delivery_address">This will be your delivery address</string>
    <string name="check_mark">&#10003;</string>
    <string name="circle_entity">&#9679;</string>
    <string name="circle_pending">&#9679; Pending</string>
    <string name="circle_processing">&#9679; Processing</string>
    <string name="circle_completed">&#9679; Completed</string>
    <string name="order_details">Order details</string>
    <string name="discount">Discount</string>
    <string name="for_any_complain">For any complain:</string>
    <string name="mail_to">Mail to: idont@givephuck.com</string>
    <string name="tron_wallet_giveaway">Your tron wallet address (if any)</string>
    <string name="get_airdrop">Get free airdrop</string>
    <string name="getting_products">Getting products...</string>
    <string name="search_on_bgkmart">Search on BGKMart</string>
    <string name="featured">Featured</string>
    <string name="on_sale">On Sale</string>
    <string name="top_rated">Top Rated</string>
    <string name="newest_products">Newest Products</string>
    <string name="best_selling">Best Selling</string>
    <string name="recently_added">Recently Added</string>
    <string name="men_fashions">Men\'s Fashion</string>
    <string name="women_fashion">Women\'s Fashion</string>
    <string name="follow">Follow</string>
    <string name="fast_food">Fast Food</string>
    <string name="filter">Filter</string>
    <array name="initial_range">
        <item>500</item>
        <item>9500</item>
    </array>
    <string name="price">Price</string>
    <string name="facebook_app_id">863561387583774</string>
    <string name="fb_login_protocol_scheme">fb863561387583774</string>
    <string name="or">Or</string>
</resources>