<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icons8_home_40px_3"
        android:title="@string/title_home" />

    <item
        android:id="@+id/categoriesBottomBtn"
        android:icon="@drawable/icons8_list_40px_4"
        android:title="@string/categories" />
    <item
        android:id="@+id/shopBottomBtn"
        android:icon="@drawable/icons8_shop_40px_2"
        android:title="@string/shop" />
    <item
        android:id="@+id/cartBottomBtn"
        android:icon="@drawable/cart_icon"
        android:title="@string/cart" />
    <item
        android:id="@+id/profileBottomBtn"
        android:icon="@drawable/icons8_user_40px"
        android:title="@string/profile" />

</menu>