<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fatima.fabric.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/categoriesBottomBtn"
        android:name="com.fatima.fabric.ui.categories.CategoriesFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/shopBottomBtn"
        android:name="com.fatima.fabric.ui.shop.ShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/cartBottomBtn"
        android:name="com.fatima.fabric.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/profileBottomBtn"
        android:name="com.fatima.fabric.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>