<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEC"
    android:orientation="vertical"
    tools:context=".ui.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white_card_border"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/couponCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/input_background"
                    android:ems="10"
                    android:hint="@string/coupon_code"
                    android:inputType="text"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/applyCouponBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/apply" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/your_order"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_card_border"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/subtotal"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/subtotalView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/zero_price"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E3E3E3"
                    android:clickable="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/coupon"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/couponPriceView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/zero_price"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E3E3E3"
                    android:clickable="false"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/shipping"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/shippinPriceView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/zero_price"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E3E3E3"
                    android:clickable="false" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/zero_price"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/your_address"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_card_border"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/fullNameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jane"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/address1View"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/house_number" />

                <TextView
                    android:id="@+id/address2View"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aparment_optional" />

                <TextView
                    android:id="@+id/cityStateCountryView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city" />

                <TextView
                    android:id="@+id/phoneView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/payment_method"
                android:textAllCaps="true"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/white_card_border"
                android:orientation="vertical"
                android:padding="10dp">

                <RadioGroup
                    android:id="@+id/paymentMethod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/paypalCheckView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/paypal" />

                    <RadioButton
                        android:id="@+id/stripeCheckView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stripe" />

                    <RadioButton
                        android:id="@+id/onDeliveryCheckView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cash_on_delivery" />

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>


        <Button
            android:id="@+id/confirmPayButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/confirm_and_pay" />










    </LinearLayout>
</ScrollView>