<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cartImage"
            android:layout_width="200dp"
            android:layout_height="105dp"
            android:layout_weight="1"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/default_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/cartProductTitle"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/product_title_sample"
                android:textColor="#303030"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/cartProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp"
                android:text="@string/product_price_sample"
                android:textColor="#db8900" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/minusBtn"
                        android:layout_width="34dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/minus" />

                    <TextView
                        android:id="@+id/cartProductQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/plusBtn"
                        android:layout_width="41dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/plus" />

                    <Button
                        android:id="@+id/removeBtn"
                        android:layout_width="79dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="#FFFFFF"
                        android:text="@string/remove"
                        android:textAllCaps="false"
                        android:textColor="@color/purple_500" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>